Added leaflet map functionailty to submission page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
 /* Home page background */
 .bg-home {
   min-height: 100vh;
-  background: fixed center url("/homepage_background.webp");
+  background: fixed center url('/homepage_background.webp');
   background-size: cover;
 }
 
@@ -82,4 +82,29 @@ body {
   padding: 12px;
   border-radius: 8px;
   text-align: center;
+}
+.swal-btn {
+  padding: 10px 24px !important;
+  border-radius: 8px !important;
+  font-size: 16px !important;
+}
+
+/* Green submit button */
+.swal-btn-submit {
+  background-color: var(--uh-green) !important;
+  color: white !important;
+}
+
+/* Blue play button */
+.swal-btn-play {
+  background-color: #007bff !important;
+  color: white !important;
+}
+
+/* Add spacing between the SweetAlert buttons */
+.swal-footer {
+  display: flex !important;
+  justify-content: center !important;
+  gap: 20px !important; /* perfect spacing */
+  margin-top: 20px !important;
 }
