Fixed submission page css to match rest of the site

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -262,7 +262,7 @@ body {
 }
 
 /* Green submit button */
-.swal-btn-submit {
+.green_btn {
   background-color: var(--uh-green) !important;
   color: white !important;
 }
