--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background: #ffffff;
+  background: #272727;
 }
 
 /* -------------------------------- */
