--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@ body {
 
 .wrapper {
   box-sizing: border-box;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -103,7 +103,7 @@ body {
 /* -------------------------------- */
 
 .leaderboard-bg {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background: linear-gradient(135deg, #d5e1e8, #f3f6f7);
   background-attachment: fixed;
   padding: 3rem 1rem;
@@ -195,6 +195,7 @@ body {
   border-radius: 15px;
   border: 3px solid var(--uh-gold);
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+  margin-bottom: 4rem;
 }
 
 /* -------------------------------- */
